# mgpu-sobel

./: CMakeLists.txt  README.md
data/input/depth/: depth.pfm  szene_1.pfm  szene_2.pfm
data/input/grey/: htw.pgm  scene.pgm  szene_1.pgm  szene_2.pgm
data/input/rgb/: htw.ppm  htw_512.ppm  scene.ppm  szene_1.ppm  szene_2.ppm
data/output/omp/: edges.pgm
include/benchmark/: benchmark_runner.hpp
include/core/: buffer.hpp  config.hpp  depth.hpp  error.hpp  image.hpp  math.hpp  timer.hpp  types.hpp
include/io/: depth_io.hpp  image_io.hpp
include/pipeline/: edge_pipeline.hpp
include/sobel/: sobel.hpp  sobel_cpu.hpp  sobel_cuda_naive.hpp  sobel_cuda_tiled.hpp  sobel_omp.hpp
src/: main.cpp
src/benchmark/: benchmark_runner.cpp
src/core/: error.cpp  timer.cpp
src/io/: depth_io.cpp  image_io.cpp
src/pipeline/: edge_pipeline.cpp
src/sobel/: sobel_cpu.cpp  sobel_cuda_naive.cu  sobel_cuda_tiled.cu  sobel_factory.cpp  sobel_omp.cpp
